crates/daemon/tests/snapshots/cli_help__cli_help_messages_split.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Take an address back out of the person it was merged into

Usage: mxr messages split [OPTIONS] <ADDRESS>

Arguments:
  <ADDRESS>

Options:
      --dry-run
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
