crates/daemon/tests/snapshots/cli_help__cli_help_modes_card.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Retire a mode's first-encounter card in every client, as closing it does, or bring it back with --show

Usage: mxr modes card [OPTIONS] <MODE>

Arguments:
  <MODE>  The mode, such as todo

Options:
      --show             Show the card again the next time the mode has items
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
