crates/daemon/tests/snapshots/cli_help__cli_help_modes_done.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Done here: the conversations leave one mode until someone writes again (in To do, their open to-dos are ticked off, or only those named with --todo). When no other mode holds a conversation it is archived at your provider too, unless `modes.archive_on_last_done` is off. Prints what happened and an undo id for `mxr undo`

Usage: mxr modes done [OPTIONS] --mode <MODE> [THREAD_IDS]...

Arguments:
  [THREAD_IDS]...  Thread ids, as `mxr now --format ids` prints them

Options:
      --mode <MODE>           The mode to be done in: messages, todo, updates or reading
      --todo <TODO_ID>        To do only: tick off just this to-do (repeat for more)
      --sender <EMAIL>        Updates or Reading: every conversation of this sender's there
      --account <ACCOUNT_ID>  The sender's account, with --sender
      --dry-run               Show what done would change without changing anything
      --format <FORMAT>       [possible values: table, json, jsonl, csv, ids]
  -h, --help                  Print help
