crates/daemon/tests/snapshots/cli_help__cli_help_modes_explain.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
What a mode is for, what lands there, its first-encounter card and its keys. Every mode that has shipped when none is named

Usage: mxr modes explain [OPTIONS] [MODE]

Arguments:
  [MODE]  The mode, such as todo

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
