crates/daemon/tests/snapshots/cli_help__cli_help_modes_hint.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Dismiss a hint in every client, as Esc or acting on its element does, or bring it back with --show. `mxr modes explain` lists the ids

Usage: mxr modes hint [OPTIONS] <ID>

Arguments:
  <ID>  The hint id, such as todo.runway

Options:
      --show             Show the hint again the next time its element is needed
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
