crates/daemon/tests/snapshots/cli_help__cli_help_modes_why.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Which modes hold a conversation, and why

Usage: mxr modes why [OPTIONS] [MESSAGE_ID]

Arguments:
  [MESSAGE_ID]  A message in the conversation

Options:
      --thread <THREAD_ID>  The conversation's thread id instead
      --format <FORMAT>     [possible values: table, json, jsonl, csv, ids]
  -h, --help                Print help
