crates/daemon/tests/snapshots/cli_help__cli_help_move.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Move message to a label/folder

Usage: mxr move [OPTIONS] <LABEL> [MESSAGE_ID]...

Arguments:
  <LABEL>          Target label
  [MESSAGE_ID]...  Message ID(s). If omitted, reads IDs from stdin when stdin is piped

Options:
      --search <SEARCH>
      --account <ACCOUNT>
      --yes
      --dry-run
      --async              Run as a daemon-side background job and poll with `mxr jobs`
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
