crates/daemon/tests/snapshots/cli_help__cli_help_notify.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Unread summary for status bars

Usage: mxr notify [OPTIONS]

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
      --watch
  -h, --help             Print help
